fixed say hello alignment

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
     width: 100%;
     position: relative;
     bottom: 25px;
-    right: 17px;
+    right: 21px;
 }
 #footer p{
     font-size: 16px;
